--- a/assets/index.html
+++ b/assets/index.html
@@ -39,7 +39,7 @@
                             Contacts
                         </a>                 
                     </nav>
-                    <a class="bags" href="#">
+                    <a class="header__bags" href="#">
                         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M6.66659 33.3332H9.99992V16.6666C9.99992 16.2246 10.1755 15.8006 10.4881 15.4881C10.8006 15.1755 11.2246 14.9999 11.6666 14.9999H31.6666V11.6666C31.6666 11.2246 31.491 10.8006 31.1784 10.4881C30.8659 10.1755 30.4419 9.99992 29.9999 9.99992H24.9149C24.4949 6.25992 21.3499 3.33325 17.4999 3.33325C13.6499 3.33325 10.5049 6.25992 10.0849 9.99992H4.99992C4.55789 9.99992 4.13397 10.1755 3.82141 10.4881C3.50885 10.8006 3.33325 11.2246 3.33325 11.6666V29.9999C3.33325 30.884 3.68444 31.7318 4.30956 32.3569C4.93468 32.9821 5.78253 33.3332 6.66659 33.3332ZM17.4999 6.66658C19.5116 6.66658 21.1966 8.09992 21.5833 9.99992H13.4166C13.8033 8.09992 15.4883 6.66658 17.4999 6.66658Z" fill="#2D3D51"/>
                             <path d="M34.9999 18.3333H14.9999C14.5579 18.3333 14.134 18.5088 13.8214 18.8214C13.5088 19.134 13.3333 19.5579 13.3333 19.9999V33.3333C13.3333 34.2173 13.6844 35.0652 14.3096 35.6903C14.9347 36.3154 15.7825 36.6666 16.6666 36.6666H33.3333C34.2173 36.6666 35.0652 36.3154 35.6903 35.6903C36.3154 35.0652 36.6666 34.2173 36.6666 33.3333V19.9999C36.6666 19.5579 36.491 19.134 36.1784 18.8214C35.8659 18.5088 35.4419 18.3333 34.9999 18.3333ZM24.9999 29.9999C20.4049 29.9999 16.6666 26.2616 16.6666 21.6666H19.9999C19.9999 24.4233 22.2433 26.6666 24.9999 26.6666C27.7566 26.6666 29.9999 24.4233 29.9999 21.6666H33.3333C33.3333 26.2616 29.5949 29.9999 24.9999 29.9999Z" fill="#2D3D51"/>
@@ -49,7 +49,128 @@
             </div>
         </header>
         <section class="first">
-
+            <div class="container-fluid">                
+                <div class="container">
+                    <div class="first__inner">
+                        <div class="first__wrapper">
+                            <p class="first__text text">
+                                The A14 Bionic processor is far ahead of other iPhone processors. The Pro's camera system performs much better in low light - and even better on the iPhone 12 Pro Max. Ceramic Shield four times reduces the risk of damage to the display if dropped. Let's see how everything works here.
+                            </p>
+                            <button class="first__button button">
+                                Shop now                               
+                            </button> 
+                        </div>
+                        
+                        <img src="images/good1.png" alt="">
+                        <div class="order">
+                            <div class="order-num active">
+                                01
+                            </div>
+                            <div class="order-line">
+                                <span></span>
+                            </div>
+                            <div class="order-num">
+                                05
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <iframe src="https://www.youtube.com/embed/EQCJwdgwNts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section class="second">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="second__inner">
+                        <div class="second__wrapper">
+                            <p class="second__text text">
+                                On the big iPhone, the Pro's camera system peaks. The 47% larger sensor and larger pixels have greatly improved the wide-angle camera's ability to capture light. The new Optical Image Stabilization (OIS) system only works with the sensor, not the lens, so you get sharp images even if your hands are shaking. And the new 65mm telephoto camera gives you even greater magnification for portraits.
+                            </p>  
+                        </div>                       
+                        <div class="order">
+                            <div class="order-num active">
+                                02
+                            </div>
+                            <div class="order-line">
+                                <span></span>
+                            </div>
+                            <div class="order-num">
+                                05
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               <img src="images/good2.png" alt=""> 
+            </div>
+        </section>
+        <section class="third">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="third__inner">
+                        <div class="third__wrapper">
+                            <div class="third__titles">
+                                <div class="title">
+                                6.7” Super Retina
+                                XDR display
+                                </div>
+                                <div class="title">
+                                    Kicks glass.
+                                </div>
+                                <div class="title">
+                                    Ceramic Shield, tougher than
+                                any smartphone glass
+                                </div>
+                            </div>
+                            <button class="first__button button">
+                                Shop now                               
+                            </button>
+                        </div>
+                        <img src="images/good3.png" alt="">
+                        <div class="order">
+                            <div class="order-num active">
+                                03
+                            </div>
+                            <div class="order-line">
+                                <span></span>
+                            </div>
+                            <div class="order-num">
+                                05
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="fourth">
+            <div class="container">
+                <div class="fourth__inner">
+                    <div class="fourth__wrapper">
+                        <div class="fourth__item">
+                            <div class="title">
+                                Four color solutions.
+                            </div>
+                            <p class="fourth__text">
+                                Pacific Blue, Gold, Silver and Graphite
+                            </p>
+                            <button class="first__button button">
+                                Shop now                               
+                            </button>
+                        </div>
+                    </div>
+                    <img src="images/good4.png" alt="">
+                    <div class="order">
+                        <div class="order-num active">
+                            04
+                        </div>
+                        <div class="order-line">
+                            <span></span>
+                        </div>
+                        <div class="order-num">
+                            05
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
